# fairgrad

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.md  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yaml
changelog.d/: 20220818_151543_gaurav.maheshwari.rst
docs/: requirements.txt
docs/source/: conf.py  index.rst  introduction.rst  reference.rst
docs/source/reference/: fairness_function.rst
docs/source/reference/torch/: cross_entropy.rst  fairness_loss.rst
examples/: requirements.txt  simple_classification_dataset.py  utils.py
src/fairgrad/: __init__.py  cross_entropy.py  fairness_functions.py
src/fairgrad/torch/: __init__.py  cross_entropy.py  fairness_loss.py
tests/: test_fairgrad.py
