[tool.poetry]
name = "fairgrad"
version = "0.2.0"
description = ""
authors = ["gmaheshwari <gaurav.maheshwari@inria.fr>", "mperrot <michael.perrot@inria.fr>"]
readme = 'README.md'
keywords = ['fairness']

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=1.0"
numpy = ">=1.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"
scriv = {extras = ["toml"], version = "^0.16.0"}
Sphinx = "^5.1.1"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
  "src/fairgrad"
]
